tests/baselines/reference/parserComputedPropertyName18.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName18.ts(1,10): error TS1161: Computed property names are not allowed in interfaces or type literals.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName18.ts (1 errors) ====
    var v: { [e]?(): number };
             ~~~
!!! error TS1161: Computed property names are not allowed in interfaces or type literals.